# objc_gltf_view

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: animation.h  main.h  material.h  matrix.h  mesh.h  model.h  node.h  shader.h  skin.h  texture.h  vector.h
include/animation/: channel.h  sampler.h
include/model/: process.h
src/: animation.m  main.m  material.m  matrix.m  mesh.m  model.m  node.m  shader.m  skin.m  texture.m  vector.m
src/animation/: channel.m  sampler.m
src/model/: process.m
